--- a/EDA1.ipynb
+++ b/EDA1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,34 +24,28 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 10000 entries, 0 to 9999\n",
-      "Data columns (total 18 columns):\n",
-      " #   Column              Non-Null Count  Dtype  \n",
-      "---  ------              --------------  -----  \n",
-      " 0   RowNumber           10000 non-null  int64  \n",
-      " 1   CustomerId          10000 non-null  int64  \n",
-      " 2   Surname             10000 non-null  object \n",
-      " 3   CreditScore         10000 non-null  int64  \n",
-      " 4   Geography           10000 non-null  object \n",
-      " 5   Gender              10000 non-null  object \n",
-      " 6   Age                 10000 non-null  int64  \n",
-      " 7   Tenure              10000 non-null  int64  \n",
-      " 8   Balance             10000 non-null  float64\n",
-      " 9   NumOfProducts       10000 non-null  int64  \n",
-      " 10  HasCrCard           10000 non-null  int64  \n",
-      " 11  IsActiveMember      10000 non-null  int64  \n",
-      " 12  EstimatedSalary     10000 non-null  float64\n",
-      " 13  Exited              10000 non-null  int64  \n",
-      " 14  Complain            10000 non-null  int64  \n",
-      " 15  Satisfaction Score  10000 non-null  int64  \n",
-      " 16  Card Type           10000 non-null  object \n",
-      " 17  Point Earned        10000 non-null  int64  \n",
-      "dtypes: float64(2), int64(12), object(4)\n",
-      "memory usage: 1.4+ MB\n"
+      "Data columns (total 12 columns):\n",
+      " #   Column            Non-Null Count  Dtype  \n",
+      "---  ------            --------------  -----  \n",
+      " 0   customer_id       10000 non-null  int64  \n",
+      " 1   credit_score      10000 non-null  int64  \n",
+      " 2   country           10000 non-null  object \n",
+      " 3   gender            10000 non-null  object \n",
+      " 4   age               10000 non-null  int64  \n",
+      " 5   tenure            10000 non-null  int64  \n",
+      " 6   balance           10000 non-null  float64\n",
+      " 7   products_number   10000 non-null  int64  \n",
+      " 8   credit_card       10000 non-null  int64  \n",
+      " 9   active_member     10000 non-null  int64  \n",
+      " 10  estimated_salary  10000 non-null  float64\n",
+      " 11  churn             10000 non-null  int64  \n",
+      "dtypes: float64(2), int64(8), object(2)\n",
+      "memory usage: 937.6+ KB\n"
      ]
     }
    ],
    "source": [
-    "df = pd.read_csv('data/Customer-Churn-Records.csv')\n",
+    "df = pd.read_csv('data/Bank Customer Churn Prediction.csv')\n",
     "\n",
     "df.info()"
    ]
@@ -64,9 +58,9 @@
     {
      "data": {
       "text/plain": [
-       "Exited\n",
-       "0    0.7962\n",
-       "1    0.2038\n",
+       "churn\n",
+       "0    0.7963\n",
+       "1    0.2037\n",
        "Name: count, dtype: float64"
       ]
      },
@@ -76,7 +70,7 @@
     }
    ],
    "source": [
-    "df['Exited'].value_counts() /len(df)"
+    "df['churn'].value_counts() /len(df)"
    ]
   },
   {
@@ -105,10 +99,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Surname</th>\n",
-       "      <th>Geography</th>\n",
-       "      <th>Gender</th>\n",
-       "      <th>Card Type</th>\n",
+       "      <th>country</th>\n",
+       "      <th>gender</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -116,40 +108,32 @@
        "      <th>count</th>\n",
        "      <td>10000</td>\n",
        "      <td>10000</td>\n",
-       "      <td>10000</td>\n",
-       "      <td>10000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>unique</th>\n",
-       "      <td>2932</td>\n",
        "      <td>3</td>\n",
        "      <td>2</td>\n",
-       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>top</th>\n",
-       "      <td>Smith</td>\n",
        "      <td>France</td>\n",
        "      <td>Male</td>\n",
-       "      <td>DIAMOND</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>freq</th>\n",
-       "      <td>32</td>\n",
        "      <td>5014</td>\n",
        "      <td>5457</td>\n",
-       "      <td>2507</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       Surname Geography Gender Card Type\n",
-       "count    10000     10000  10000     10000\n",
-       "unique    2932         3      2         4\n",
-       "top      Smith    France   Male   DIAMOND\n",
-       "freq        32      5014   5457      2507"
+       "       country gender\n",
+       "count    10000  10000\n",
+       "unique       3      2\n",
+       "top     France   Male\n",
+       "freq      5014   5457"
       ]
      },
      "execution_count": 4,
@@ -188,99 +172,77 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Surname</th>\n",
-       "      <th>Geography</th>\n",
-       "      <th>Gender</th>\n",
-       "      <th>Card Type</th>\n",
+       "      <th>country</th>\n",
+       "      <th>gender</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Hargrave</td>\n",
        "      <td>France</td>\n",
        "      <td>Female</td>\n",
-       "      <td>DIAMOND</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Hill</td>\n",
        "      <td>Spain</td>\n",
        "      <td>Female</td>\n",
-       "      <td>DIAMOND</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Onio</td>\n",
        "      <td>France</td>\n",
        "      <td>Female</td>\n",
-       "      <td>DIAMOND</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Boni</td>\n",
        "      <td>France</td>\n",
        "      <td>Female</td>\n",
-       "      <td>GOLD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Mitchell</td>\n",
        "      <td>Spain</td>\n",
        "      <td>Female</td>\n",
-       "      <td>GOLD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>Chu</td>\n",
        "      <td>Spain</td>\n",
        "      <td>Male</td>\n",
-       "      <td>DIAMOND</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>Bartlett</td>\n",
        "      <td>France</td>\n",
        "      <td>Male</td>\n",
-       "      <td>SILVER</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>Obinna</td>\n",
        "      <td>Germany</td>\n",
        "      <td>Female</td>\n",
-       "      <td>DIAMOND</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>He</td>\n",
        "      <td>France</td>\n",
        "      <td>Male</td>\n",
-       "      <td>GOLD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>H?</td>\n",
        "      <td>France</td>\n",
        "      <td>Male</td>\n",
-       "      <td>GOLD</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    Surname Geography  Gender Card Type\n",
-       "0  Hargrave    France  Female   DIAMOND\n",
-       "1      Hill     Spain  Female   DIAMOND\n",
-       "2      Onio    France  Female   DIAMOND\n",
-       "3      Boni    France  Female      GOLD\n",
-       "4  Mitchell     Spain  Female      GOLD\n",
-       "5       Chu     Spain    Male   DIAMOND\n",
-       "6  Bartlett    France    Male    SILVER\n",
-       "7    Obinna   Germany  Female   DIAMOND\n",
-       "8        He    France    Male      GOLD\n",
-       "9        H?    France    Male      GOLD"
+       "   country  gender\n",
+       "0   France  Female\n",
+       "1    Spain  Female\n",
+       "2   France  Female\n",
+       "3   France  Female\n",
+       "4    Spain  Female\n",
+       "5    Spain    Male\n",
+       "6   France    Male\n",
+       "7  Germany  Female\n",
+       "8   France    Male\n",
+       "9   France    Male"
       ]
      },
      "execution_count": 5,
@@ -298,7 +260,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.get_dummies(df, columns=['Geography'])"
+    "df = pd.get_dummies(df, columns=['country'])"
    ]
   },
   {
@@ -307,7 +269,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['Gender'] = df['Gender'].apply(lambda x: 1 if x == 'Male' else 0)"
+    "df['gender'] = df['gender'].apply(lambda x: 1 if x == 'Male' else 0)"
    ]
   },
   {
@@ -316,152 +278,30 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Card Type\n",
-       "DIAMOND     2507\n",
-       "GOLD        2502\n",
-       "SILVER      2496\n",
-       "PLATINUM    2495\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['Card Type'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.preprocessing import OrdinalEncoder\n",
-    "\n",
-    "df['Card Type'] = OrdinalEncoder(categories=[['SILVER', 'GOLD', 'PLATINUM', 'DIAMOND']]).fit_transform(df[['Card Type']])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Card Type\n",
-       "3.0    2507\n",
-       "1.0    2502\n",
-       "0.0    2496\n",
-       "2.0    2495\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['Card Type'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Gender\n",
-       "1    5457\n",
-       "0    4543\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['Gender'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Surname\n",
-       "Smith        32\n",
-       "Scott        29\n",
-       "Martin       29\n",
-       "Walker       28\n",
-       "Brown        26\n",
-       "             ..\n",
-       "Hull          1\n",
-       "Sturdee       1\n",
-       "Flannagan     1\n",
-       "Dwyer         1\n",
-       "Corby         1\n",
-       "Name: count, Length: 2932, dtype: int64"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['Surname'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 10000 entries, 0 to 9999\n",
-      "Data columns (total 20 columns):\n",
-      " #   Column              Non-Null Count  Dtype  \n",
-      "---  ------              --------------  -----  \n",
-      " 0   RowNumber           10000 non-null  int64  \n",
-      " 1   CustomerId          10000 non-null  int64  \n",
-      " 2   Surname             10000 non-null  object \n",
-      " 3   CreditScore         10000 non-null  int64  \n",
-      " 4   Gender              10000 non-null  int64  \n",
-      " 5   Age                 10000 non-null  int64  \n",
-      " 6   Tenure              10000 non-null  int64  \n",
-      " 7   Balance             10000 non-null  float64\n",
-      " 8   NumOfProducts       10000 non-null  int64  \n",
-      " 9   HasCrCard           10000 non-null  int64  \n",
-      " 10  IsActiveMember      10000 non-null  int64  \n",
-      " 11  EstimatedSalary     10000 non-null  float64\n",
-      " 12  Exited              10000 non-null  int64  \n",
-      " 13  Complain            10000 non-null  int64  \n",
-      " 14  Satisfaction Score  10000 non-null  int64  \n",
-      " 15  Card Type           10000 non-null  float64\n",
-      " 16  Point Earned        10000 non-null  int64  \n",
-      " 17  Geography_France    10000 non-null  bool   \n",
-      " 18  Geography_Germany   10000 non-null  bool   \n",
-      " 19  Geography_Spain     10000 non-null  bool   \n",
-      "dtypes: bool(3), float64(3), int64(13), object(1)\n",
-      "memory usage: 1.3+ MB\n"
+      "Data columns (total 14 columns):\n",
+      " #   Column            Non-Null Count  Dtype  \n",
+      "---  ------            --------------  -----  \n",
+      " 0   customer_id       10000 non-null  int64  \n",
+      " 1   credit_score      10000 non-null  int64  \n",
+      " 2   gender            10000 non-null  int64  \n",
+      " 3   age               10000 non-null  int64  \n",
+      " 4   tenure            10000 non-null  int64  \n",
+      " 5   balance           10000 non-null  float64\n",
+      " 6   products_number   10000 non-null  int64  \n",
+      " 7   credit_card       10000 non-null  int64  \n",
+      " 8   active_member     10000 non-null  int64  \n",
+      " 9   estimated_salary  10000 non-null  float64\n",
+      " 10  churn             10000 non-null  int64  \n",
+      " 11  country_France    10000 non-null  bool   \n",
+      " 12  country_Germany   10000 non-null  bool   \n",
+      " 13  country_Spain     10000 non-null  bool   \n",
+      "dtypes: bool(3), float64(2), int64(9)\n",
+      "memory usage: 888.8 KB\n"
      ]
     }
    ],
@@ -471,21 +311,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['RowNumber', 'CustomerId', 'Surname', 'CreditScore', 'Gender', 'Age',\n",
-       "       'Tenure', 'Balance', 'NumOfProducts', 'HasCrCard', 'IsActiveMember',\n",
-       "       'EstimatedSalary', 'Exited', 'Complain', 'Satisfaction Score',\n",
-       "       'Card Type', 'Point Earned', 'Geography_France', 'Geography_Germany',\n",
-       "       'Geography_Spain'],\n",
+       "Index(['customer_id', 'credit_score', 'gender', 'age', 'tenure', 'balance',\n",
+       "       'products_number', 'credit_card', 'active_member', 'estimated_salary',\n",
+       "       'churn', 'country_France', 'country_Germany', 'country_Spain'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,21 +334,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "features = ['CreditScore', 'Gender', 'Age',\n",
-    "    'Tenure', 'Balance', 'NumOfProducts', 'HasCrCard', 'IsActiveMember',\n",
-    "    'EstimatedSalary', 'Complain', 'Satisfaction Score',\n",
-    "    'Card Type', 'Point Earned', 'Geography_France', 'Geography_Germany',\n",
-    "    'Geography_Spain']\n",
-    "target = 'Exited'"
+    "features = ['credit_score', 'gender', 'age', 'tenure', 'balance',\n",
+    "    'products_number', 'credit_card', 'active_member', 'estimated_salary',\n",
+    "    'country_France', 'country_Germany', 'country_Spain']\n",
+    "target = 'churn'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -951,7 +787,7 @@
        "RandomForestClassifier(random_state=42)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -965,23 +801,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 1.00\n",
+      "Accuracy: 0.87\n",
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       1.00      1.00      1.00      1607\n",
-      "           1       1.00      1.00      1.00       393\n",
+      "           0       0.88      0.96      0.92      1607\n",
+      "           1       0.76      0.47      0.58       393\n",
       "\n",
-      "    accuracy                           1.00      2000\n",
-      "   macro avg       1.00      1.00      1.00      2000\n",
-      "weighted avg       1.00      1.00      1.00      2000\n",
+      "    accuracy                           0.87      2000\n",
+      "   macro avg       0.82      0.72      0.75      2000\n",
+      "weighted avg       0.86      0.87      0.85      2000\n",
       "\n"
      ]
     }
